chore(back): remove hard-coded passwords, extract constants, and fix raw generic usages